--- a/index.html
+++ b/index.html
@@ -188,6 +188,25 @@
       .shadow {
         box-shadow: 0 0 5px 2px rgb(0 0 0 / 10%);
       }
+      .progress {
+        display: flex;
+        height: 1rem;
+        overflow: hidden;
+        font-size: 0.75rem;
+        background-color: #e9ecef;
+        border-radius: 0.25rem;
+      }
+      .progress-bar {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        overflow: hidden;
+        color: #fff;
+        text-align: center;
+        white-space: nowrap;
+        background-color: var(--primary);
+        transition: width 0.6s ease;
+      }
       ul.horizontal-list > li {
         vertical-align: middle;
         display: inline-block;
@@ -200,6 +219,7 @@
       .card {
         padding: 2rem;
         width: 100%;
+        border-radius: 0.25rem;
       }
       amp-img {
         background-color: gray;
@@ -721,6 +741,9 @@
       .m-0 {
         margin: 0;
       }
+      .mb-2 {
+        margin-bottom: 0.5rem;
+      }
       .mb-3 {
         margin-bottom: 1rem;
       }
@@ -870,7 +893,12 @@
             >
               Profile
             </div>
-            <div id="tab2" role="tab" aria-controls="tabpanel2" option="1">
+            <div
+              id="competencies"
+              role="tab"
+              aria-controls="tabpanel2"
+              option="1"
+            >
               Competencies
             </div>
             <div id="tab3" role="tab" aria-controls="tabpanel3" option="2">
@@ -922,8 +950,111 @@
             layout="responsive"
           ></amp-img>
         </div>
-        <div id="tabpanel2" role="tabpanel" aria-labelledby="tab2" option>
-          Tab two content...
+        <div
+          id="tabpanel2"
+          role="tabpanel"
+          aria-labelledby="competencies"
+          option
+        >
+          <div style="margin: 2rem">
+            <div class="inline-flex flex-column mb-3">
+              <h2 style="margin-bottom: 0.25rem">Competencies</h2>
+              <div class="bg-primary" style="height: 2px"></div>
+            </div>
+
+            <div class="row">
+              <div class="col-xs col-md-6">
+                <div>
+                  <div class="row between-xs mb-2">
+                    <span class="col-xs">HTML</span
+                    ><i class="col-xs" style="text-align: end">100%</i>
+                  </div>
+                  <progress
+                    class="progress-bar"
+                    role="progressbar"
+                    aria-valuenow="100"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                    style="width: 100%"
+                  ></progress>
+                </div>
+
+                <div class="progress">
+                  <span class="skill">CSS <i class="val">90%</i></span>
+                  <div class="progress-bar-wrap">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      aria-valuenow="90"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                      style="width: 90%"
+                    ></div>
+                  </div>
+                </div>
+
+                <div class="progress">
+                  <span class="skill">JavaScript <i class="val">75%</i></span>
+                  <div class="progress-bar-wrap">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      aria-valuenow="75"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                      style="width: 75%"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-xs col-md-6">
+                <div class="progress">
+                  <span class="skill">PHP <i class="val">80%</i></span>
+                  <div class="progress-bar-wrap">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      aria-valuenow="80"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                      style="width: 80%"
+                    ></div>
+                  </div>
+                </div>
+
+                <div class="progress">
+                  <span class="skill"
+                    >WordPress/CMS <i class="val">90%</i></span
+                  >
+                  <div class="progress-bar-wrap">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      aria-valuenow="90"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                      style="width: 90%"
+                    ></div>
+                  </div>
+                </div>
+
+                <div class="progress">
+                  <span class="skill">Photoshop <i class="val">55%</i></span>
+                  <div class="progress-bar-wrap">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      aria-valuenow="55"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                      style="width: 55%"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div id="tabpanel3" role="tabpanel" aria-labelledby="tab3" option>
           Tab three content...
