--- a/index.html
+++ b/index.html
@@ -188,24 +188,21 @@
       .shadow {
         box-shadow: 0 0 5px 2px rgb(0 0 0 / 10%);
       }
-      .progress {
+      progress {
         display: flex;
         height: 1rem;
+        width: 100%;
         overflow: hidden;
         font-size: 0.75rem;
         background-color: #e9ecef;
         border-radius: 0.25rem;
+        color: var(--primary);
       }
-      .progress-bar {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        overflow: hidden;
-        color: #fff;
-        text-align: center;
-        white-space: nowrap;
-        background-color: var(--primary);
-        transition: width 0.6s ease;
+      progress::-moz-progress-bar {
+        background: var(--primary);
+      }
+      progress::-webkit-progress-value {
+        background: var(--primary);
       }
       ul.horizontal-list > li {
         vertical-align: middle;
@@ -969,88 +966,49 @@
                     <span class="col-xs">HTML</span
                     ><i class="col-xs" style="text-align: end">100%</i>
                   </div>
-                  <progress
-                    class="progress-bar"
-                    role="progressbar"
-                    aria-valuenow="100"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                    style="width: 100%"
-                  ></progress>
+                  <progress role="progressbar" value="100" max="100"></progress>
                 </div>
-
-                <div class="progress">
-                  <span class="skill">CSS <i class="val">90%</i></span>
-                  <div class="progress-bar-wrap">
-                    <div
-                      class="progress-bar"
-                      role="progressbar"
-                      aria-valuenow="90"
-                      aria-valuemin="0"
-                      aria-valuemax="100"
-                      style="width: 90%"
-                    ></div>
+                <br />
+                <div>
+                  <div class="row between-xs mb-2">
+                    <span class="col-xs">CSS</span
+                    ><i class="col-xs" style="text-align: end">90%</i>
                   </div>
+                  <progress role="progressbar" value="90" max="100"></progress>
                 </div>
-
-                <div class="progress">
-                  <span class="skill">JavaScript <i class="val">75%</i></span>
-                  <div class="progress-bar-wrap">
-                    <div
-                      class="progress-bar"
-                      role="progressbar"
-                      aria-valuenow="75"
-                      aria-valuemin="0"
-                      aria-valuemax="100"
-                      style="width: 75%"
-                    ></div>
+                <br />
+                <div>
+                  <div class="row between-xs mb-2">
+                    <span class="col-xs">JavaScript</span
+                    ><i class="col-xs" style="text-align: end">75%</i>
                   </div>
+                  <progress role="progressbar" value="75" max="100"></progress>
                 </div>
               </div>
 
               <div class="col-xs col-md-6">
-                <div class="progress">
-                  <span class="skill">PHP <i class="val">80%</i></span>
-                  <div class="progress-bar-wrap">
-                    <div
-                      class="progress-bar"
-                      role="progressbar"
-                      aria-valuenow="80"
-                      aria-valuemin="0"
-                      aria-valuemax="100"
-                      style="width: 80%"
-                    ></div>
+                <div>
+                  <div class="row between-xs mb-2">
+                    <span class="col-xs">PHP</span
+                    ><i class="col-xs" style="text-align: end">80%</i>
                   </div>
+                  <progress role="progressbar" value="80" max="100"></progress>
                 </div>
-
-                <div class="progress">
-                  <span class="skill"
-                    >WordPress/CMS <i class="val">90%</i></span
-                  >
-                  <div class="progress-bar-wrap">
-                    <div
-                      class="progress-bar"
-                      role="progressbar"
-                      aria-valuenow="90"
-                      aria-valuemin="0"
-                      aria-valuemax="100"
-                      style="width: 90%"
-                    ></div>
+                <br />
+                <div>
+                  <div class="row between-xs mb-2">
+                    <span class="col-xs">WordPress</span
+                    ><i class="col-xs" style="text-align: end">90%</i>
                   </div>
+                  <progress role="progressbar" value="90" max="100"></progress>
                 </div>
-
-                <div class="progress">
-                  <span class="skill">Photoshop <i class="val">55%</i></span>
-                  <div class="progress-bar-wrap">
-                    <div
-                      class="progress-bar"
-                      role="progressbar"
-                      aria-valuenow="55"
-                      aria-valuemin="0"
-                      aria-valuemax="100"
-                      style="width: 55%"
-                    ></div>
+                <br />
+                <div>
+                  <div class="row between-xs mb-2">
+                    <span class="col-xs">Photoshop</span
+                    ><i class="col-xs" style="text-align: end">55%</i>
                   </div>
+                  <progress role="progressbar" value="55" max="100"></progress>
                 </div>
               </div>
             </div>
