--- a/index.html
+++ b/index.html
@@ -954,64 +954,89 @@
           option
         >
           <div style="margin: 2rem">
-            <div class="inline-flex flex-column mb-3">
-              <h2 style="margin-bottom: 0.25rem">Competencies</h2>
-              <div class="bg-primary" style="height: 2px"></div>
-            </div>
-
-            <div class="row">
-              <div class="col-xs col-md-6">
-                <div>
-                  <div class="row between-xs mb-2">
-                    <span class="col-xs">HTML</span
-                    ><i class="col-xs" style="text-align: end">100%</i>
+            <!-- skills section -->
+            <section>
+              <div class="inline-flex flex-column mb-3">
+                <h2 style="margin-bottom: 0.25rem">Competencies</h2>
+                <div class="bg-primary" style="height: 2px"></div>
+              </div>
+              <div class="row">
+                <div class="col-xs col-md-6">
+                  <div>
+                    <div class="row between-xs mb-2">
+                      <span class="col-xs">HTML</span
+                      ><i class="col-xs" style="text-align: end">100%</i>
+                    </div>
+                    <progress
+                      role="progressbar"
+                      value="100"
+                      max="100"
+                    ></progress>
                   </div>
-                  <progress role="progressbar" value="100" max="100"></progress>
+                  <br />
+                  <div>
+                    <div class="row between-xs mb-2">
+                      <span class="col-xs">CSS</span
+                      ><i class="col-xs" style="text-align: end">90%</i>
+                    </div>
+                    <progress
+                      role="progressbar"
+                      value="90"
+                      max="100"
+                    ></progress>
+                  </div>
+                  <br />
+                  <div>
+                    <div class="row between-xs mb-2">
+                      <span class="col-xs">JavaScript</span
+                      ><i class="col-xs" style="text-align: end">75%</i>
+                    </div>
+                    <progress
+                      role="progressbar"
+                      value="75"
+                      max="100"
+                    ></progress>
+                  </div>
                 </div>
-                <br />
-                <div>
-                  <div class="row between-xs mb-2">
-                    <span class="col-xs">CSS</span
-                    ><i class="col-xs" style="text-align: end">90%</i>
+                <div class="col-xs col-md-6">
+                  <div>
+                    <div class="row between-xs mb-2">
+                      <span class="col-xs">PHP</span
+                      ><i class="col-xs" style="text-align: end">80%</i>
+                    </div>
+                    <progress
+                      role="progressbar"
+                      value="80"
+                      max="100"
+                    ></progress>
                   </div>
-                  <progress role="progressbar" value="90" max="100"></progress>
-                </div>
-                <br />
-                <div>
-                  <div class="row between-xs mb-2">
-                    <span class="col-xs">JavaScript</span
-                    ><i class="col-xs" style="text-align: end">75%</i>
+                  <br />
+                  <div>
+                    <div class="row between-xs mb-2">
+                      <span class="col-xs">WordPress</span
+                      ><i class="col-xs" style="text-align: end">90%</i>
+                    </div>
+                    <progress
+                      role="progressbar"
+                      value="90"
+                      max="100"
+                    ></progress>
                   </div>
-                  <progress role="progressbar" value="75" max="100"></progress>
+                  <br />
+                  <div>
+                    <div class="row between-xs mb-2">
+                      <span class="col-xs">Photoshop</span
+                      ><i class="col-xs" style="text-align: end">55%</i>
+                    </div>
+                    <progress
+                      role="progressbar"
+                      value="55"
+                      max="100"
+                    ></progress>
+                  </div>
                 </div>
               </div>
-
-              <div class="col-xs col-md-6">
-                <div>
-                  <div class="row between-xs mb-2">
-                    <span class="col-xs">PHP</span
-                    ><i class="col-xs" style="text-align: end">80%</i>
-                  </div>
-                  <progress role="progressbar" value="80" max="100"></progress>
-                </div>
-                <br />
-                <div>
-                  <div class="row between-xs mb-2">
-                    <span class="col-xs">WordPress</span
-                    ><i class="col-xs" style="text-align: end">90%</i>
-                  </div>
-                  <progress role="progressbar" value="90" max="100"></progress>
-                </div>
-                <br />
-                <div>
-                  <div class="row between-xs mb-2">
-                    <span class="col-xs">Photoshop</span
-                    ><i class="col-xs" style="text-align: end">55%</i>
-                  </div>
-                  <progress role="progressbar" value="55" max="100"></progress>
-                </div>
-              </div>
-            </div>
+            </section>
           </div>
         </div>
         <div id="tabpanel3" role="tabpanel" aria-labelledby="tab3" option>
