--- a/index.html
+++ b/index.html
@@ -1092,14 +1092,14 @@
                 <div class="col-lg-3 col-md-4 mt-4">
                   <div class="card shadow">
                     <i class="ri-file-list-3-line" style="color: #11dbcf"></i>
-                    <h3>Midela Teren</h3>
+                    <h3 class="m-0">Midela Teren</h3>
                   </div>
                   <br />
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4">
                   <div class="card shadow">
                     <i class="ri-price-tag-2-line" style="color: #4233ff"></i>
-                    <h3>Pira Neve</h3>
+                    <h3 class="m-0">Pira Neve</h3>
                   </div>
                   <br />
                 </div>
