--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@
                 <div class="col-lg-3 col-md-4 mt-4">
                   <div class="card shadow">
                     <i class="ri-gradienter-line" style="color: #ffa76e"></i>
-                    <h3>Eiusmod Tempor</h3>
+                    <h3 class="m-0">Eiusmod Tempor</h3>
                   </div>
                   <br />
                 </div>
