--- a/index.html
+++ b/index.html
@@ -1078,7 +1078,7 @@
                 <div class="col-lg-3 col-md-4 mt-4">
                   <div class="card shadow">
                     <i class="ri-database-2-line" style="color: #47aeff"></i>
-                    <h3>Nemo Enim</h3>
+                    <h3 class="m-0">Nemo Enim</h3>
                   </div>
                   <br />
                 </div>
