--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@
                 <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
                   <div class="card shadow">
                     <i class="ri-paint-brush-line" style="color: #e361ff"></i>
-                    <h3>Magni Dolores</h3>
+                    <h3 class="m-0">Magni Dolores</h3>
                   </div>
                   <br />
                 </div>
