--- a/index.html
+++ b/index.html
@@ -1064,7 +1064,7 @@
                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                   <div class="card shadow">
                     <i class="ri-calendar-todo-line" style="color: #e80368"></i>
-                    <h3>Sed perspiciatis</h3>
+                    <h3 class="m-0">Sed perspiciatis</h3>
                   </div>
                   <br />
                 </div>
