--- a/index.html
+++ b/index.html
@@ -1057,7 +1057,7 @@
                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                   <div class="card shadow">
                     <i class="ri-bar-chart-box-line" style="color: #5578ff"></i>
-                    <h3>Dolor Sitema</h3>
+                    <h3 class="m-0">Dolor Sitema</h3>
                   </div>
                   <br />
                 </div>
