--- a/index.html
+++ b/index.html
@@ -1050,7 +1050,7 @@
                 <div class="col-lg-3 col-md-4">
                   <div class="card shadow">
                     <i class="ri-store-line" style="color: #ffbb2c"></i>
-                    <h3>Lorem Ipsum</h3>
+                    <h3 class="m-0">Lorem Ipsum</h3>
                   </div>
                   <br />
                 </div>
