--- a/index.html
+++ b/index.html
@@ -822,6 +822,13 @@
     >
   </head>
   <body>
+    <amp-img
+            src="background.png"
+            alt="Background"
+            height="400"
+            width="800"
+            layout="fixed"
+          ></amp-img>
     <header class="shadow">
       <section class="bg-primary">
         <!-- socials header section -->
