--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <style amp-custom>
       /* any custom style goes here */
       :root {
-        --primary: #1973f0;
+        --primary: #52d36f;
         --secondary: #4a4a4a;
         --light: #ffffff;
         --dark: #ffffff;
@@ -823,14 +823,15 @@
   </head>
   <body>
     <amp-img
-            src="background.png"
-            alt="Background"
-            height="400"
-            width="800"
-            layout="fixed"
-          ></amp-img>
+      style="z-index: -1"
+      src="background.png"
+      alt="Background"
+      height="100%"
+      width="100%"
+      layout="fill"
+    ></amp-img>
     <header class="shadow">
-      <section class="bg-primary">
+      <section class="">
         <!-- socials header section -->
         <nav class="container py-2">
           <ul
