--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
       custom-element="amp-social-share"
       src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"
     ></script>
-
+    <!-- custom script -->
+    <script
+      async
+      custom-element="amp-script"
+      src="https://cdn.ampproject.org/v0/amp-script-0.1.js"
+    ></script>
     <title>Home &bull; Eliah Mbwilo</title>
     <!-- bootstrap icons -->
     <link
@@ -193,7 +198,7 @@
       }
       progress {
         display: flex;
-        height: 1rem;
+        height: 0.75rem;
         width: 100%;
         overflow: hidden;
         font-size: 0.75rem;
