--- a/index.html
+++ b/index.html
@@ -1255,7 +1255,7 @@
         </div>
       </div>
     </footer>
-    <amp-script layout="container" script="particles-script">
+    <amp-script layout="fill" script="particles-script">
       <canvas class="background"></canvas>
     </amp-script>
     <script
