--- a/index.html
+++ b/index.html
@@ -914,7 +914,7 @@
         </nav>
       </amp-layout>
       <!-- menu header section -->
-      <amp-layout layout="container" class="bg-white">
+      <amp-layout layout="container" class="">
         <nav class="container row end-xs mx-auto">
           <amp-selector
             class="tabs-with-selector col-md-8 col-lg-6 row around-xs"
