--- a/index.html
+++ b/index.html
@@ -925,6 +925,13 @@
             layout="fixed-height"
           >
             <div
+              id="tab0"
+              role="tab"
+              aria-controls="tabpanel1"
+              option="-1"
+              selected
+            ></div>
+            <div
               id="tab1"
               role="tab"
               aria-controls="tabpanel1"
