--- a/index.html
+++ b/index.html
@@ -981,9 +981,9 @@
     <main class="container">
       <amp-selector id="myTabPanels" class="tabpanels">
         <div
-          id="tabpanel1"
+          id="tabpanel0"
           role="tabpanel"
-          aria-labelledby="tab1"
+          aria-labelledby="tab0"
           option
           selected
         >
@@ -996,6 +996,9 @@
             width="800"
             layout="responsive"
           ></amp-img>
+        </div>
+        <div id="tabpanel1" role="tabpanel" aria-labelledby="tab1" option>
+          Tab one content...
         </div>
         <div
           id="tabpanel2"
