--- a/index.html
+++ b/index.html
@@ -931,13 +931,7 @@
               option="-1"
               selected
             ></div>
-            <div
-              id="tab1"
-              role="tab"
-              aria-controls="tabpanel1"
-              option="0"
-              selected
-            >
+            <div id="tab1" role="tab" aria-controls="tabpanel1" option="0">
               Profile
             </div>
             <div
