--- a/index.html
+++ b/index.html
@@ -1259,7 +1259,7 @@
         </div>
       </div>
     </footer>
-    <amp-script layout="fill" script="particles-script">
+    <amp-script style="z-index: -1" layout="fill" script="particles-script">
       <canvas class="background"></canvas>
     </amp-script>
     <script
