--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
           option
           selected
         >
-          <amp-layout layout="container" class="flex flex-fill">
+          <amp-layout layout="container" height="600" class="flex flex-fill">
             <h1>Welcome to the mobile web</h1>
             <amp-img
               src="https://picsum.photos/800"
