--- a/index.html
+++ b/index.html
@@ -984,15 +984,12 @@
           option
           selected
         >
-          <amp-layout layout="container" class="flex flex-fill center-xs">
+          <amp-layout
+            layout="container"
+            height="600"
+            class="flex flex-fill flex-column center-xs"
+          >
             <h1>Mbwix</h1>
-            <amp-img
-              src="https://picsum.photos/800"
-              alt="Welcome"
-              height="400"
-              width="800"
-              layout="responsive"
-            ></amp-img>
           </amp-layout>
         </div>
         <div id="tabpanel1" role="tabpanel" aria-labelledby="tab1" option>
