--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
         --space-4: 2rem; /* 32px */
       }
       html,
-      body {
+      body,
+      main {
         height: 100%;
       }
       *:focus {
@@ -937,30 +938,30 @@
               id="tab0"
               role="tab"
               aria-controls="tabpanel1"
-              option="-1"
+              option="0"
               selected
             ></div>
-            <div id="tab1" role="tab" aria-controls="tabpanel1" option="0">
+            <div id="tab1" role="tab" aria-controls="tabpanel1" option="1">
               Profile
             </div>
             <div
               id="competencies"
               role="tab"
               aria-controls="tabpanel2"
-              option="1"
+              option="2"
             >
               Competencies
             </div>
-            <div id="tab3" role="tab" aria-controls="tabpanel3" option="2">
+            <div id="tab3" role="tab" aria-controls="tabpanel3" option="3">
               Experience
             </div>
-            <div id="tab4" role="tab" aria-controls="tabpanel4" option="3">
+            <div id="tab4" role="tab" aria-controls="tabpanel4" option="4">
               Projects
             </div>
-            <div id="tab5" role="tab" aria-controls="tabpanel5" option="4">
+            <div id="tab5" role="tab" aria-controls="tabpanel5" option="5">
               Honors
             </div>
-            <div id="contacts" role="tab" aria-controls="tabpanel6" option="5">
+            <div id="contacts" role="tab" aria-controls="tabpanel6" option="6">
               Contacts
             </div>
           </amp-selector>
