--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@
         text-align: center;
         padding: var(--space-1);
       }
+      amp-selector.tabpanels {
+        height: inherit;
+      }
       amp-selector.tabpanels [role="tabpanel"] {
         display: none;
         /* custom styling, feel free to change */
