--- a/index.html
+++ b/index.html
@@ -312,17 +312,7 @@
         margin-left: -0.5rem;
       }
 
-      .col-xs,
-      .col-xs-1,
-      .col-xs-2,
-      .col-xs-3,
-      .col-xs-4,
-      .col-xs-5,
-      .col-xs-6,
-      .col-xs-7,
-      .col-xs-8,
-      .col-xs-9,
-      .col-xs-10 {
+      .col-xs {
         box-sizing: border-box;
         -webkit-box-flex: 0;
         -ms-flex: 0 0 auto;
@@ -338,66 +328,6 @@
         -ms-flex-preferred-size: 0;
         flex-basis: 0;
         max-width: 100%;
-      }
-
-      .col-xs-1 {
-        -ms-flex-preferred-size: 8.33333333%;
-        flex-basis: 8.33333333%;
-        max-width: 8.33333333%;
-      }
-
-      .col-xs-2 {
-        -ms-flex-preferred-size: 16.66666667%;
-        flex-basis: 16.66666667%;
-        max-width: 16.66666667%;
-      }
-
-      .col-xs-3 {
-        -ms-flex-preferred-size: 25%;
-        flex-basis: 25%;
-        max-width: 25%;
-      }
-
-      .col-xs-4 {
-        -ms-flex-preferred-size: 33.33333333%;
-        flex-basis: 33.33333333%;
-        max-width: 33.33333333%;
-      }
-
-      .col-xs-5 {
-        -ms-flex-preferred-size: 41.66666667%;
-        flex-basis: 41.66666667%;
-        max-width: 41.66666667%;
-      }
-
-      .col-xs-6 {
-        -ms-flex-preferred-size: 50%;
-        flex-basis: 50%;
-        max-width: 50%;
-      }
-
-      .col-xs-7 {
-        -ms-flex-preferred-size: 58.33333333%;
-        flex-basis: 58.33333333%;
-        max-width: 58.33333333%;
-      }
-
-      .col-xs-8 {
-        -ms-flex-preferred-size: 66.66666667%;
-        flex-basis: 66.66666667%;
-        max-width: 66.66666667%;
-      }
-
-      .col-xs-9 {
-        -ms-flex-preferred-size: 75%;
-        flex-basis: 75%;
-        max-width: 75%;
-      }
-
-      .col-xs-10 {
-        -ms-flex-preferred-size: 83.33333333%;
-        flex-basis: 83.33333333%;
-        max-width: 83.33333333%;
       }
 
       .start-xs {
