--- a/index.html
+++ b/index.html
@@ -331,6 +331,12 @@
         max-width: 100%;
       }
 
+      .col-xs-6 {
+          -ms-flex-preferred-size: 50%;
+          flex-basis: 50%;
+          max-width: 50%;
+        }
+
       .start-xs {
         -webkit-box-pack: start;
         -ms-flex-pack: start;
