--- a/index.html
+++ b/index.html
@@ -313,7 +313,8 @@
         margin-left: -0.5rem;
       }
 
-      .col-xs {
+      .col-xs,
+      .col-xs-6 {
         box-sizing: border-box;
         -webkit-box-flex: 0;
         -ms-flex: 0 0 auto;
@@ -332,10 +333,10 @@
       }
 
       .col-xs-6 {
-          -ms-flex-preferred-size: 50%;
-          flex-basis: 50%;
-          max-width: 50%;
-        }
+        -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+        max-width: 50%;
+      }
 
       .start-xs {
         -webkit-box-pack: start;
