--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@
       .bg-white {
         background: var(--white);
       }
+      .bg-white-light {
+        background: rgba(255, 255, 255, 0.6);
+      }
       .text-primary {
         color: var(--primary);
       }
@@ -1093,35 +1096,35 @@
               </div>
               <div class="row">
                 <div class="col-xs-6 col-lg-3 col-md-4">
-                  <div class="card shadow bg-white">
+                  <div class="card shadow bg-white-light">
                     <i class="ri-store-line" style="color: #ffbb2c"></i>
                     <h3 class="m-0 text-primary">Lorem Ipsum</h3>
                   </div>
                   <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mt-4 mt-md-0">
-                  <div class="card shadow bg-white">
+                  <div class="card shadow bg-white-light">
                     <i class="ri-bar-chart-box-line" style="color: #5578ff"></i>
                     <h3 class="m-0">Dolor Sitema</h3>
                   </div>
                   <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mt-4 mt-md-0">
-                  <div class="card shadow">
+                  <div class="card shadow bg-white-light">
                     <i class="ri-calendar-todo-line" style="color: #e80368"></i>
                     <h3 class="m-0">Sed perspiciatis</h3>
                   </div>
                   <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mt-4 mt-lg-0">
-                  <div class="card shadow">
+                  <div class="card shadow bg-white-light">
                     <i class="ri-paint-brush-line" style="color: #e361ff"></i>
                     <h3 class="m-0">Magni Dolores</h3>
                   </div>
                   <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mt-4">
-                  <div class="card shadow">
+                  <div class="card shadow bg-white-light">
                     <i class="ri-database-2-line" style="color: #47aeff"></i>
                     <h3 class="m-0">Nemo Enim</h3>
                   </div>
@@ -1135,14 +1138,14 @@
                   <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mt-4">
-                  <div class="card shadow">
+                  <div class="card shadow bg-white-light">
                     <i class="ri-file-list-3-line" style="color: #11dbcf"></i>
                     <h3 class="m-0">Midela Teren</h3>
                   </div>
                   <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mt-4">
-                  <div class="card shadow">
+                  <div class="card shadow bg-white-light">
                     <i class="ri-price-tag-2-line" style="color: #4233ff"></i>
                     <h3 class="m-0">Pira Neve</h3>
                   </div>
