--- a/index.html
+++ b/index.html
@@ -1098,7 +1098,7 @@
                 <div class="col-xs-6 col-lg-3 col-md-4">
                   <div class="card shadow bg-white-light">
                     <i class="ri-store-line" style="color: #ffbb2c"></i>
-                    <h3 class="m-0 text-primary">Lorem Ipsum</h3>
+                    <h3 class="m-0">Lorem Ipsum</h3>
                   </div>
                   <br />
                 </div>
@@ -1131,7 +1131,7 @@
                   <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mt-4">
-                  <div class="card shadow">
+                  <div class="card shadow bg-white-light">
                     <i class="ri-gradienter-line" style="color: #ffa76e"></i>
                     <h3 class="m-0">Eiusmod Tempor</h3>
                   </div>
