--- a/index.html
+++ b/index.html
@@ -1174,15 +1174,15 @@
               <div class="bg-primary" style="height: 2px"></div>
             </div>
             <div class="row between-xs">
-              <div class="col-md-6 flex items-stretch mb-3">
-                <div class="card shadow">
+              <div class="col-xs-12 col-sm-6 col-md-6 flex items-stretch mb-3">
+                <div class="card shadow bg-secondary">
                   <i class="bx bx-map"></i>
                   <h3>My Address</h3>
                   <p>A108 Adam Street, New York, NY 535022</p>
                 </div>
               </div>
-              <div class="col-md-6 flex items-stretch mb-3">
-                <div class="card shadow">
+              <div class="col-xs-12 col-sm-6 col-md-6 flex items-stretch mb-3">
+                <div class="card shadow bg-secondary">
                   <i class="bi bi-share-alt"></i>
                   <h3>Social Profiles</h3>
                   <ul
@@ -1232,15 +1232,15 @@
                   </ul>
                 </div>
               </div>
-              <div class="col-md-6 flex items-stretch mb-3">
-                <div class="card shadow">
+              <div class="col-xs-12 col-sm-6 col-md-6 flex items-stretch mb-3">
+                <div class="card shadow bg-secondary">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Me</h3>
                   <p>contact@example.com</p>
                 </div>
               </div>
-              <div class="col-md-6 flex items-stretch mb-3">
-                <div class="card shadow">
+              <div class="col-xs-12 col-sm-6 col-md-6 flex items-stretch mb-3">
+                <div class="card shadow bg-secondary">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Me</h3>
                   <p>+1 5589 55488 55</p>
