--- a/index.html
+++ b/index.html
@@ -320,7 +320,8 @@
       }
 
       .col-xs,
-      .col-xs-6 {
+      .col-xs-6,
+      .col-xs-12 {
         box-sizing: border-box;
         -webkit-box-flex: 0;
         -ms-flex: 0 0 auto;
@@ -342,6 +343,12 @@
         -ms-flex-preferred-size: 50%;
         flex-basis: 50%;
         max-width: 50%;
+      }
+
+      .col-xs-12 {
+        -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+        max-width: 100%;
       }
 
       .start-xs {
