--- a/index.html
+++ b/index.html
@@ -1106,56 +1106,56 @@
               </div>
               <div class="row">
                 <div class="col-xs-6 col-lg-3 col-md-4">
-                  <div class="card shadow bg-white-light">
+                  <div class="card shadow bg-secondary">
                     <i class="ri-store-line" style="color: #ffbb2c"></i>
                     <h3 class="m-0">Lorem Ipsum</h3>
                   </div>
                   <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mt-4 mt-md-0">
-                  <div class="card shadow bg-white-light">
+                  <div class="card shadow bg-secondary">
                     <i class="ri-bar-chart-box-line" style="color: #5578ff"></i>
                     <h3 class="m-0">Dolor Sitema</h3>
                   </div>
                   <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mt-4 mt-md-0">
-                  <div class="card shadow bg-white-light">
+                  <div class="card shadow bg-secondary">
                     <i class="ri-calendar-todo-line" style="color: #e80368"></i>
                     <h3 class="m-0">Sed perspiciatis</h3>
                   </div>
                   <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mt-4 mt-lg-0">
-                  <div class="card shadow bg-white-light">
+                  <div class="card shadow bg-secondary">
                     <i class="ri-paint-brush-line" style="color: #e361ff"></i>
                     <h3 class="m-0">Magni Dolores</h3>
                   </div>
                   <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mt-4">
-                  <div class="card shadow bg-white-light">
+                  <div class="card shadow bg-secondary">
                     <i class="ri-database-2-line" style="color: #47aeff"></i>
                     <h3 class="m-0">Nemo Enim</h3>
                   </div>
                   <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mt-4">
-                  <div class="card shadow bg-white-light">
+                  <div class="card shadow bg-secondary">
                     <i class="ri-gradienter-line" style="color: #ffa76e"></i>
                     <h3 class="m-0">Eiusmod Tempor</h3>
                   </div>
                   <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mt-4">
-                  <div class="card shadow bg-white-light">
+                  <div class="card shadow bg-secondary">
                     <i class="ri-file-list-3-line" style="color: #11dbcf"></i>
                     <h3 class="m-0">Midela Teren</h3>
                   </div>
                   <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mt-4">
-                  <div class="card shadow bg-white-light">
+                  <div class="card shadow bg-secondary">
                     <i class="ri-price-tag-2-line" style="color: #4233ff"></i>
                     <h3 class="m-0">Pira Neve</h3>
                   </div>
@@ -1193,7 +1193,7 @@
                   <i class="bi bi-share-alt"></i>
                   <h3>Social Profiles</h3>
                   <ul
-                    class="horizontal-list text-primary p-0 m-0"
+                    class="horizontal-list p-0 m-0"
                     style="list-style-type: none"
                   >
                     <li class="px-1">
@@ -1203,7 +1203,7 @@
                         target="_blank"
                         rel="nofollow noreferrer"
                       >
-                        <i class="bi-facebook" style="font-size: 1.2rem"></i
+                        <i class="bi-facebook" style="font-size: 1.4rem"></i
                       ></a>
                     </li>
                     <li class="px-1">
@@ -1213,7 +1213,7 @@
                         target="_blank"
                         rel="nofollow noreferrer"
                       >
-                        <i class="bi-twitter" style="font-size: 1.2rem"></i>
+                        <i class="bi-twitter" style="font-size: 1.4rem"></i>
                       </a>
                     </li>
                     <li class="px-1">
@@ -1223,7 +1223,7 @@
                         target="_blank"
                         rel="nofollow noreferrer"
                       >
-                        <i class="bi-instagram" style="font-size: 1.2rem"></i>
+                        <i class="bi-instagram" style="font-size: 1.4rem"></i>
                       </a>
                     </li>
                     <li class="px-1">
@@ -1233,7 +1233,7 @@
                         target="_blank"
                         rel="nofollow noreferrer"
                       >
-                        <i class="bi-linkedin" style="font-size: 1.2rem"></i>
+                        <i class="bi-linkedin" style="font-size: 1.4rem"></i>
                       </a>
                     </li>
                   </ul>
