--- a/index.html
+++ b/index.html
@@ -953,15 +953,9 @@
           selected
         >
           <amp-layout layout="container" class="">
-            <div class="row bottom-xs">
-              <h1>Eliah Mbwilo&ensp;-&ensp;</h1>
-              <h2>
-                <span style="border-bottom: 2px solid var(--primary)"
-                  >Computer Scientist</span
-                >
-              </h2>
-            </div>
-            <blockquote>
+            <h1>Eliah Mbwilo</h1>
+            <h2>Computer Scientist</h2>
+            <blockquote style="margin-left: 0">
               Proficient computer scientist interested in designing and creating
               system architectures that are maintainable, reliable, robust, and
               most importantly intelligent.
